--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="store">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Shaping Up With Angular.JS</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <script type="text/javascript" src="js/angular.min.js"></script>
 </head>
