--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <script type="text/javascript" src="js/angular.min.js"></script>
 </head>
 <body ng-controller="StoreController as store">
-    <div ng-repeat="product in store.products" ng-hide="store.product.soldOut">
-        <h1>{{ product.name }}</h1>
-        <h2>${{ product.price }}</h2>
-        <p>{{ product.description }}</p>
-        <button ng-show="product.canPurchase">Add to Cart</button>
-    </div>
+    <ul class="list-group">
+        <li class="list-group-item" ng-repeat="product in store.products">
+            <h3>
+                {{ product.name }}
+                <em class="pull-right">${{ product.price }}</em>
+            </h3>
+        </li>
+    </ul>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 </body>
