--- a/index.html
+++ b/index.html
@@ -14,6 +14,31 @@
                 <em class="pull-right">{{ product.price | currency }}</em>
                 <img ng-src="{{ product.images[0].full }}" />
             </h3>
+            <section ng-controller="PanelController as panel">
+                <ul class="nav nav-pills">
+                    <li ng-class="{ active:panel.isSelected(1)}">
+                        <a href="#" ng-click="panel.selectTab(1)">Description</a>
+                    </li>
+                    <li ng-class="{ active:panel.isSelected(2)}">
+                        <a href="#" ng-click="panel.selectTab(2)">Specifications</a>
+                    </li>
+                    <li ng-class="{ active:panel.isSelected(3)}">
+                        <a href="#" ng-click="panel.selectTab(3)">Reviews</a>
+                    </li>
+                </ul>
+                <div class="panel" ng-show="panel.isSelected(1)">
+                    <h4>Description</h4>
+                    <p>{{ product.description }}</p>
+                </div>
+                <div class="panel" ng-show="panel.isSelected(2)">
+                    <h4>Specifications</h4>
+                    <blockquote>None yet</blockquote>
+                </div>
+                <div class="panel" ng-show="panel.isSelected(3)">
+                    <h4></h4>
+                    <blockquote>None yet</blockquote>
+                </div>
+            </section>
         </li>
     </ul>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
